--- a/app/views/poeets/index.html.erb
+++ b/app/views/poeets/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Poeets#index</h1>
-<p>Find me in app/views/poeets/index.html.erb</p>
+<h1>Poeet一覧</h1>
+<table>
+  <% @poeets.each do |poeet| %>
+    <tr>
+      <td><%= poeet.content %></td>
+    </tr>
+  <% end %>
+</table>
+<%= link_to 'ポイートする', new_poeet_path %>
