--- a/app/views/poeets/new.html.erb
+++ b/app/views/poeets/new.html.erb
@@ -1,18 +1,2 @@
-<%= form_with(model: @poeet,local: true)  do |form| %>
-  <% if @poeet.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= @poeet.errors.count %>件のエラーがあります。</h2>
-   
-      <ul>
-        <% @poeet.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div class="poeet_content">
-    <%= form.label :content %>
-    <%= form.text_field :content %>
-  </div>
-  <%= form.submit %>
-<% end %>
+<h2>ポイートする</h2>
+<%= render 'form' %>
