--- a/app/views/poeets/_form.html.erb
+++ b/app/views/poeets/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @poeet,local: true)  do |form| %>
+<%= form_with(model: @poeet,local: true , url: choose_new_or_edit)  do |form| %>
   <% if @poeet.errors.any? %>
     <div id="error_explanation">
       <h2><%= @poeet.errors.count %>件のエラーがあります。</h2>
