--- a/app/views/poeets/index.html.erb
+++ b/app/views/poeets/index.html.erb
@@ -4,7 +4,7 @@
   <% @poeets.each do |poeet| %>
     <tr>
       <td><%= poeet.content %></td>
-      <td><%= link_to "編集",edit_poeet_path(poeet.id) , data: {confirm: '本当に編集していいですか？'} %></td>
+      <td><%= link_to "編集",edit_poeet_path(poeet.id)  %></td>
       <td><%= link_to "削除",poeet_path(poeet.id),method: :delete,data: {confirm: '本当に削除していいですか？'} %></td>
     </tr>
   <% end %>
