--- a/app/views/poeets/_form.html.erb
+++ b/app/views/poeets/_form.html.erb
@@ -1,19 +1,36 @@
-<%= form_with(model: @poeet,local: true , url: choose_new_or_edit)  do |form| %>
-  <% if @poeet.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= @poeet.errors.count %>件のエラーがあります。</h2>
+<div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <%= form_with(model: @poeet,remote: true , url: choose_new_or_edit)  do |form| %>
+      <% if @poeet.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= @poeet.errors.count %>件のエラーがあります。</h2>
    
-      <ul>
-        <% @poeet.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-        <% end %>
-      </ul>
+          <ul>
+            <% @poeet.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+    <div class="modal-header">
+      <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
     </div>
-  <% end %>
-  <div class="poeet_content">
-    <%= form.label :content %>
-    <%= form.text_field :content %>
+    <div class="modal-body">
+    <%# <div class="poeet_content"> %>
+      <div class="form-group field">
+        <%= form.label :content %>
+        <%= form.text_field :content %>
+      </div>
+    </div>
+    <div class="modal-footer actions">
+      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      <%= form.submit %>
+    </div>
+    <% end %>
   </div>
-  <%= form.submit %>
-<% end %>
-<%= link_to "ポイート一覧に戻る", poeets_path %>
+</div>
+
+<%# <%= link_to "ポイート一覧に戻る", poeets_path %> %>
