--- a/app/views/poeets/index.html.erb
+++ b/app/views/poeets/index.html.erb
@@ -4,9 +4,10 @@
   <% @poeets.each do |poeet| %>
     <tr>
       <td><%= poeet.content %></td>
-      <td><%= link_to "編集",edit_poeet_path(poeet.id)  %></td>
-      <td><%= link_to "削除",poeet_path(poeet.id),method: :delete,data: {confirm: '本当に削除していいですか？'} %></td>
+      <td><%= link_to "編集",edit_poeet_path(poeet.id) ,remote: true,class: "btn btn-lg btn-primary" %></td>
+      <td><%= link_to "削除",poeet_path(poeet.id),method: :delete,data: {confirm: '本当に削除していいですか？'},remote: true,class: "btn btn-lg btn-primary" %></td>
     </tr>
   <% end %>
 </table>
-<%= link_to 'ポイートする', new_poeet_path %>
+<%= link_to 'ポイートする', new_poeet_path , remote: true, class: "btn btn-lg btn-primary" %>
+<div class="modal fade" id="poeet-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"></div>
