編集および確認画面をモーダルで実装

--- a/app/views/poeets/_form.html.erb
+++ b/app/views/poeets/_form.html.erb
@@ -13,7 +13,7 @@
         </div>
       <% end %>
     <div class="modal-header">
-      <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+      <h5 class="modal-title" id="exampleModalLabel">新規ポイート</h5>
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
@@ -21,7 +21,6 @@
     <div class="modal-body">
     <%# <div class="poeet_content"> %>
       <div class="form-group field">
-        <%= form.label :content %>
         <%= form.text_field :content %>
       </div>
     </div>
