--- a/app/views/poeets/edit.js.erb
+++ b/app/views/poeets/edit.js.erb
@@ -1,2 +1,6 @@
 $("#poeet-modal").html("<%= escape_javascript(render 'form') %>");
+$("#poeet-modal").modal({
+  backdrop:'static',
+  keybord: false
+});
 $("#poeet-modal").modal("show");
