--- a/app/views/poeets/_confirm.html.erb
+++ b/app/views/poeets/_confirm.html.erb
@@ -1,13 +1,11 @@
 <div class="modal-dialog" role="document">
   <div class="modal-content">
-    <%# <h3>以下の内容で、ポイートする</h3> %>
- 
     <%= form_with(model: @poeet, url:confirm_new_or_edit, method: confirm_form_method, remote: true) do |form| %>
       <div class="modal-header">
       <% if @poeet.id? %>
-        <h5 class="modal-title" id="exampleModalLabel">ポイート確認 修正</h5>
+        <h5 class="modal-title" id="exampleModalLabel">ポイート編集の確認</h5>
       <% else %>
-        <h5 class="modal-title" id="exampleModalLabel">ポイート確認 新規</h5>
+        <h5 class="modal-title" id="exampleModalLabel">新規ポイートの確認</h5>
       <% end %>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
@@ -15,12 +13,11 @@
       </div>
       <div class="modal-body">
         <%= form.hidden_field :content %>
-      
         <p><%= @poeet.content %></p>
       </div>
       <div class="modal-footer actions">
         <%= form.submit('戻る',class: 'btn btn-secondary',name: 'back')%>
-          <%= form.submit('ポイート',class: 'btn btn-primary') %>
+        <%= form.submit('ポイート',class: 'btn btn-primary') %>
       </div>
     <% end %>
   </div>
