--- a/app/views/poeets/index.html.erb
+++ b/app/views/poeets/index.html.erb
@@ -2,7 +2,11 @@
 </header>
 <section class="poetry-section">
   <h1>Poeet一覧</h1>
-  <p><%= notice %></p>
+  <div class="poeet-notice">
+    <p class="flash"><%= notice %></p>
+  </div>
+  
+  
   <%= link_to 'ポイートする', new_poeet_path , remote: true, class: "poeet-btn" %>
 <div class="modal fade" id="poeet-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"></div>
   <div>
