--- a/app/assets/stylesheets/poeets.scss
+++ b/app/assets/stylesheets/poeets.scss
@@ -7,21 +7,23 @@
 //   position: relative;
 //   // justify-content: flex-end;
 // }
+
 body {
   display: flex;
-  // justify-content: center;
-  // align-items: center;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   min-height: 100vh;
   padding-top: 40px;
   padding-bottom: 40px;
   background: #efefef;
+  width: 100%;
+  height: 100%;
 }
 
 h1,
 h5 {
   margin-bottom: 40px;
-  font-family: 'Noto Serif JP', serif;
-  color: #444;
   font-weight: 700;
   letter-spacing: .2rem;
 }
@@ -29,6 +31,36 @@ h5 {
 section {
   margin-top: 40px;
   margin-bottom: 40px;
+}
+
+footer {
+
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  // padding-right: 40px;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+.copyright {
+  display: flex;
+  justify-content: right;
+}
+
+.poeet-header {
+  top: 0px;
+  left: 0px;
+  // padding: 60px 20px;
+  position: fixed;
+  justify-content: space-between;
+  padding-top: 40px;
+  padding-left: 10%;
+  padding-right: 10%;
+  width: 100%;
 }
 
 .poeet-btn {
@@ -65,12 +97,20 @@ section {
     inset 2px 2px 4px rgba(0, 0, 0, .15);
 }
 
+.poeet-btn-big {
+  display: block;
+  // text-align: center;
+  margin-left: 20px;
+  margin-right: 20px;
+
+}
+
 .poetry-section {
   width: 80%;
   /* 幅は親要素の80% */
-  max-width: 500px;
+  max-width: 600px;
   /* 幅は最大500pxまでしか広げない */
-  margin: 0 auto;
+  margin-top: 50px;
   /* 左右をauto指定にして左右中央揃えに */
 }
 
@@ -92,16 +132,16 @@ section {
   // background-color: rgb(218, 216, 206);
   // // border-top: solid 5px #5d627b;
   // box-shadow: 0 3px 5px rgba(0, 0, 0, 0.22);
-  padding: 20px 20px 20px 20px;
+  padding: 20px 20px 30px 20px;
 }
 
 .poeet-body {
   display: block;
   position: relative;
   // width: 200px;
-  height: 200px;
+  height: 280px;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
 
   // padding: 20px 20px 20px 20px;
 }
@@ -118,19 +158,21 @@ section {
   -ms-writing-mode: tb-rl;
   -ms-writing-mode: vertical-rl;
   writing-mode: vertical-rl;
+  text-orientation: upright;
   display: inline-block;
   font-family: 'Noto Serif JP', serif;
   color: #444;
   font-weight: 700;
-  letter-spacing: .2rem;
+  letter-spacing: .5rem;
   text-align: left;
-  height: 200px;
+  height: 250px;
   word-break: break-all;
+  line-height: 2rem;
 }
 
 .poeet-footer {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-around;
   margin-top: 40px;
   margin-bottom: 20px;
 }
@@ -153,6 +195,8 @@ section {
   font-size: 1rem;
   font-weight: 700;
   letter-spacing: .2rem;
+  font-family: 'Noto Serif JP', serif;
+
 }
 
 .modal-backdrop {
@@ -195,4 +239,10 @@ section {
 
   /*アニメーション終了時は不透明度100%*/
 
+}
+
+.text-3d {
+  color: #444;
+  text-shadow: 0 4px 8px rgba(0, 0, 0, .6),
+    0 -2px 0 rgba(255, 255, 255, 1);
 }
