--- a/app/views/poeets/index.html.erb
+++ b/app/views/poeets/index.html.erb
@@ -1,15 +1,17 @@
-<header>
+<header class="poeet-header">
+ <h1 class="text-3d">Poeet</h1>
 </header>
 <section class="poetry-section">
-  <h1>Poeet一覧</h1>
+ 
   <div class="poeet-notice">
     <p class="flash"><%= notice %></p>
   </div>
   
   
-  <%= link_to 'ポイートする', new_poeet_path , remote: true, class: "poeet-btn" %>
+ 
 <div class="modal fade" id="poeet-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"></div>
   <div>
+   <%= link_to 'ポイートする', new_poeet_path , remote: true, class: "poeet-btn poeet-btn-big" %>
    <% @poeets.each do |poeet| %>
     <div class="poeet-box">
       <div class = "poeet-body">
@@ -30,4 +32,6 @@
   </div>
 </div>
 </section>
-<footer></footer>
+<footer>
+  <div class="copyright"><small>© 2020 INKFISH inc.</small></div>
+</footer>
