--- a/app/assets/stylesheets/poeets.scss
+++ b/app/assets/stylesheets/poeets.scss
@@ -168,6 +168,7 @@ footer {
   height: 250px;
   word-break: break-all;
   line-height: 2rem;
+  white-space: normal;
 }
 
 .poeet-footer {
@@ -175,6 +176,12 @@ footer {
   justify-content: space-around;
   margin-top: 40px;
   margin-bottom: 20px;
+}
+
+.poeet-footer-confirm {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
 }
 
 .poeet-edit {
@@ -206,6 +213,15 @@ footer {
 
 .modal-content {
   border: none;
+
+}
+
+.modal-body {
+  // height: 420px;
+}
+
+.modal-footer {
+  flex-wrap: nowrap;
 }
 
 .poeet-notice {
@@ -245,4 +261,21 @@ footer {
   color: #444;
   text-shadow: 0 4px 8px rgba(0, 0, 0, .6),
     0 -2px 0 rgba(255, 255, 255, 1);
+}
+
+.poeet-text-area {
+  writing-mode: tb-rl;
+  width: 460px;
+  height: 200px;
+  resize: none;
+  border-radius: 9px;
+  border: none;
+  background: #efefef;
+  box-shadow: inset 6px 6px 12px #d9d9d9,
+    inset -6px -6px 12px #ffffff;
+  font-family: 'Noto Serif JP', serif;
+  color: #444;
+  font-weight: 700;
+  letter-spacing: .5rem;
+  text-align: left;
 }
