--- a/app/views/poeets/_confirm.html.erb
+++ b/app/views/poeets/_confirm.html.erb
@@ -13,12 +13,20 @@
       </div>
       <div class="modal-body">
         <%= form.hidden_field :content %>
-        <p><%= @poeet.content %></p>
-      </div>
-      <div class="modal-footer actions">
-        <%= form.submit('戻る',class: 'poeet-btn',name: 'back')%>
-        <%= form.submit('ポイート',class: 'poeet-btn') %>
-      </div>
-    <% end %>
+        <div class = "poeet-body">
+          <div class="poeet-content">
+            <p class="poeet-text"> <%= @poeet.content %></p>
+          </div>
+        </div>
+        <div class="modal-footer actions poeet-footer-confirm">
+          <div class="poeet-edit">
+            <%= form.submit('戻る',class: 'poeet-btn',name: 'back')%>
+          </div>
+          <div class = "poeet-delete">
+            <%= form.submit('ポイート',class: 'poeet-btn') %>
+          </div>
+        </div>
+        <% end %>
+      </div?>
   </div>
 </div>
