copyrightの表記変更とデザインの微修正

--- a/app/views/poeets/_form.html.erb
+++ b/app/views/poeets/_form.html.erb
@@ -27,7 +27,7 @@
         <%= form.text_area :content,class: "poeet-text-area" %>
       </div>
     </div>
-    <div class="modal-footer actions poeet-footer-confirm">
+    <div class="modal-footer actions ">
       <button type="button" class="poeet-btn" data-dismiss="modal">閉じる</button>
       <%= form.submit('確認',class: 'poeet-btn') %>
     </div>
