--- a/app/views/poeets/index.html.erb
+++ b/app/views/poeets/index.html.erb
@@ -33,5 +33,5 @@
 </div>
 </section>
 <footer>
-  <div class="copyright"><small>© 2020 INKFISH inc.</small></div>
+  <div class="copyright"><small>© 2020 INKFISH</small></div>
 </footer>
