--- a/app/views/poeets/index.html.erb
+++ b/app/views/poeets/index.html.erb
@@ -1,5 +1,5 @@
 <header class="poeet-header">
-  <h1 class="text-3d">Poeet</h1>
+  <h1 class="text-3d">Poety</h1>
 </header>
 <section class="poetry-section">
   <div class="poeet-notice">
